# aether

./: .gitignore  LICENSE  Local-AI-Powered-Browsers.md  README.md  THIRD_PARTY_LICENSES.md  TRADEMARKS.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package.json  tsconfig.json  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: build.yml
docs/: Fable-changelog.md  Local-AI-Powered-Browsers.md  Semantic_Trail_PLAN.md
scripts/: build-linux-arm64.sh  build-linux.sh  bump-version.ts  make-styled-dmg.sh  normalize-deb-package.sh  prepare-dmg-background.sh  release.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: embeddinggemma.rs  lib.rs  main.rs
src/main/: index.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html  orb-preview.html
src/renderer/src/: App.tsx  env.d.ts  main.tsx  tauri-aether.ts
src/renderer/src/assets/: main.css
src/renderer/src/assets/styles/: air-view.css  browser-chrome.css  crystallizer.css  dashboard-captures.css  dashboard-shell.css  flow-map.css  flow-view.css  foundation.css  intelligence-panel.css  knowledge-shelves.css  setup-settings.css  shared-overrides.css  start-page.css
src/renderer/src/components/: AirView.tsx  AnswerComposer.tsx  BrowserChrome.tsx  CaptureDetailCard.tsx  CollectionDialog.tsx  Crystallizer.tsx  CrystallizingOrb.tsx  Dashboard.tsx  FlowView.tsx  IntelligencePanel.tsx  ModelSetupModal.tsx  OllamaStatusMenu.tsx  SourceTray.tsx  StartPage.tsx  icons.tsx
src/renderer/src/components/loading-ui/: TextShimmer.tsx
src/renderer/src/constants/: Features.tsx
src/renderer/src/types/: ui.ts
src/renderer/src/utils/: aether-ui.ts  collection-icon-data.ts  collection-icons.tsx
src/shared/: aether.ts
