[package]
name = "aether"
version = "1.0.0"
description = "Local AI-powered browser and knowledge hub"
authors = ["canpixel.com"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "aether_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9", features = ["unstable"] }
tauri-plugin-opener = "2.5"
tokio = { version = "1", features = ["fs", "sync", "time"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
