[package]
name = "aether"
version = "1.0.0"
description = "Local AI-powered browser and knowledge hub"
authors = ["canpixel.com"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "aether_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
# Metal is added only in the macOS target block below; it is Apple-only and would
# break Windows/Linux/Android compiles. Off macOS, llama.cpp runs CPU-only.
llama-cpp-2 = { version = "0.1.146", default-features = false, features = ["sampler"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9", features = ["unstable"] }
tauri-plugin-opener = "2.5"
tokio = { version = "1", features = ["fs", "io-util", "sync", "time"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Cargo unions features across target tables, so on macOS llama.cpp gets metal + sampler.
llama-cpp-2 = { version = "0.1.146", default-features = false, features = ["metal"] }
